# adk-research-agent

./: .gitignore  README.md  pyproject.toml  server.py  updates.md  vercel.json
api/: main.py  schemas.py
data/: bm25_docs.pkl  bm25_index.pkl  corpus.jsonl
data/qdrant/: meta.json
data/qdrant/collection/eu_regs/: storage.sqlite
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
frontend/src/: index.css  index_locked.css  main.ts
research_agent/: .env.example  __init__.py  agent.py  orchestrator.py
research_agent/agents/: __init__.py  analyzer.py  clarifier.py  formatter.py  planner.py  reasoner.py  searcher.py  synthesizer.py  validator.py
research_agent/models/: __init__.py  paper.py  reasoning.py
research_agent/retrylogic/: __init__.py  breakers.py  circuit_breaker.py  exceptions.py  retry.py
research_agent/tools/: __init__.py  abstract_extractor.py  arxiv_search.py  cache.py  citation_traversal.py  citation_validator.py  openalex_search.py  paper_filter.py  paper_ranker.py  pubmed_search.py  retrieval.py
tests/: conftest.py  test_arxiv.py  test_models.py  test_openalex.py  test_retrylogic.py  test_server.py  test_tools.py
