[project]
name = "adk-agent"
version = "0.1.0"
description = "Multi-agent research assistant built with Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "arxiv>=4.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
azure = [
    "litellm",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]